# reaveros

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  daily-maintenance.yml
cmake/: ctest_trampoline.cmake.in  target_functions.cmake
docker/: build-image  update-images
images/: initrd.cmake  uefi.cmake
kernel/: CMakeLists.txt  component.cmake  main.cpp  meta.cmake
kernel/arch/: cpu.h  int.h  ipi.h  irqs.h  mp.h  smp.h  thread.h  timers.h  vm.h
kernel/arch/amd64/: core.cpp  core.h  cpu.cpp  gdt.cpp  idt.cpp  idt.h  irqs.cpp  irqs.h  kernel.lds  kernel.lds.in  lapic.cpp  lapic.h
kernel/arch/amd64/boot/: serial.cpp  serial.h
kernel/arch/amd64/cpu/: core.cpp  core.h  cpu.asm  cpu.cpp  cpu.h  gdt.cpp  gdt.h  idt.cpp  int.h  irqs.cpp  irqs.h  lapic.cpp  lapic.h  syscalls.cpp  syscalls.h  thread.cpp  thread.h
kernel/arch/amd64/memory/: vm.cpp  vm.h
kernel/arch/amd64/mp/: mp.cpp  mp.h
kernel/arch/amd64/smp/: smp.cpp  smp.h  trampoline.asm
kernel/arch/amd64/timers/: hpet.cpp  hpet.h  lapic.cpp  lapic.h  timers.cpp  timers.h
kernel/arch/common/acpi/: acpi.cpp  acpi.h
kernel/boot/: README.md  log_iterator.h  screen.cpp  screen.h
kernel/bootinit/: CMakeLists.txt  addresses.h  bootinit.lds.in  log.cpp  log.h  main.cpp  print.cpp  print.h  process.cpp  process.h
kernel/memory/: pmm.cpp  pmm.h  vas.cpp  vas.h  vm.cpp  vm.h  vmo.cpp  vmo.h  vmo_mapping.cpp  vmo_mapping.h
kernel/scheduler/: instance.cpp  instance.h  mailbox.cpp  mailbox.h  process.cpp  process.h  scheduler.cpp  scheduler.h  thread.cpp  thread.h  types.cpp  types.h
kernel/test/: CMakeLists.txt
kernel/test/util/avl_tree/: erase-specific.test.cpp  erase.test.cpp  find.test.cpp  insert.test.cpp  lower_bound.test.cpp  upper_bound.test.cpp
kernel/test/util/linked_heap/: push_pop.test.cpp
kernel/test/util/tree_heap/: push_pop.test.cpp
kernel/time/: time.cpp  time.h
kernel/util/: address_types.h  avl_tree.h  bit_lock.h  chained_allocator.h  fifo.h  handle.cpp  handle.h  helpers.h  initrd.cpp  initrd.h  integer_types.h  interrupt_control.h  intrusive_ptr.h  linked_heap.h  log.cpp  log.h  mp.cpp  mp.h  pointer_types.h  tree_heap.h
kernel/vdso/: CMakeLists.txt  meta.thorn
kernel/vdso/include/rose/syscall/: early.h  typedefs.h
kernel/vdso/src/: early.cpp
libraries/: CMakeLists.txt
libraries/archive/: CMakeLists.txt  component.cmake
libraries/archive/include/: CMakeLists.txt
libraries/archive/include/archive/: cpio.h
libraries/archive/src/: CMakeLists.txt  cpio.cpp
libraries/boot-protocol/: CMakeLists.txt  component.cmake
libraries/boot-protocol/include/: boot-constants.h  boot-memmap.h
libraries/elf/: CMakeLists.txt  component.cmake
libraries/elf/include/: CMakeLists.txt
libraries/elf/include/elf/: elf.h  types.h
libraries/elf/src/: CMakeLists.txt  elf.cpp
libraries/libboot-protocol/: CMakeLists.txt
libraries/libboot-protocol/include/: CMakeLists.txt  boot-arguments.h  boot-memmap.h  boot-video.h
libraries/libfreestanding/include/: CMakeLists.txt  atomic  charconv  chrono  compare  concepts  cstddef  cstdint  cstring  format  iterator  memory  mutex  new  ratio  string_view  system_error  type_traits  utility  version
libraries/libfreestanding/src/: cstring.cpp
libraries/rosert/: CMakeLists.txt  component.cmake
libraries/rosert/include/: CMakeLists.txt
libraries/rosert/include/rosert/: init.h
libraries/rosert/src/: CMakeLists.txt  init.cpp
libraries/rosert/src/amd64/: crt0.asm
libraries/rosestd/: CMakeLists.txt  component.cmake
libraries/rosestd/include/: CMakeLists.txt  __char_traits  __config  algorithm  atomic  charconv  chrono  compare  concepts  cstddef  cstdint  cstring  cwchar  format  iterator  memory  mutex  new  optional  ratio  shared_mutex  string_view  system_error  type_traits  utility  variant  version
libraries/rosestd/src/: CMakeLists.txt  cstring.cpp
libraries/rosestd/test/: CMakeLists.txt
libraries/rosestd/test/utilities/charconv/: to_chars_integral.test.cpp
libraries/rosestd/test/utilities/format/: alignment.test.cpp  boolean.test.cpp  integers.test.cpp
loaders/: CMakeLists.txt
loaders/uefi/: CMakeLists.txt  component.cmake  crt0.asm  loader.lds  main.cpp
loaders/uefi/cpu/: paging.h
loaders/uefi/cpu/amd64/: cpuid.cpp  cpuid.h  environment.cpp  gdt.asm  paging.cpp  paging.h
loaders/uefi/efi/: console.cpp  console.h  efi.cpp  efi.h  filesystem.cpp  system_table.h  types.h  video_mode.cpp  video_mode.h
maintenance/: create-pr  update-mtools.sh  update-toolchain  update-toolchains  update.git.sh
toolchain/: CMakeLists.txt  cmake.cmake  config.cmake  fs-fat.cmake  llvm.cmake  thorn.cmake
toolchain/cmake/patches/: 000-reaveros.patch
toolchain/files/: amd64-freestanding.cmake.in  amd64-hosted.cmake.in  amd64-tests.cmake.in  amd64-uefi.cmake.in
toolchain/llvm/fakeroot/usr/include/: assert.h  limits.h
toolchain/llvm/patches/: 000-reaveros-support-with-less-plt.patch  000-reaveros-support.patch
toolchain/thorn/: CMakeLists.txt  context.cpp  context.h  generator.cpp  generator.h  lexer.h  main.cpp  parser.cpp  parser.h  util.h
toolchains/: CMakeLists.txt  cmake.cmake  config.cmake  fs-fat.cmake  llvm.cmake
toolchains/files/: llvm-amd64-kernel.cmake.in  llvm-amd64-user.cmake.in
userspace/: CMakeLists.txt
userspace/bootinit/: CMakeLists.txt  bootinit.lds  component.cmake  main.cpp
userspace/services/: CMakeLists.txt
userspace/services/logger/: CMakeLists.txt  component.cmake  main.cpp
userspace/services/vasmgr/: CMakeLists.txt  component.cmake  main.cpp
